--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,3 +1,3 @@
 {{#each model as |question|}}
-  <h3>{{question.ask}}</h3>
+  <h3>{{#link-to 'question' question.id}}{{question.ask}}{{/link-to}}</h3>
 {{/each}}
