allow users to edit questions

--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -1,3 +1,4 @@
 {{question-detail question=model}}
+{{edit-question edit="edit" question=model}}
 {{new-answer saveAnswer="saveAnswer" question=model}}
 {{answer-list question=model}}
