--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,2 +1,4 @@
-<h2>About Us</h2>
-<p>There isn't much to say about our little question and answer forum. If you have a question about who we are, what we do, and why we do it, then you should {{#link-to 'new-question'}}ask{{/link-to}} us</p>
+<div class="about">
+  <h2>About Us</h2>
+  <p>There isn't much to say about our little question and answer forum. If you have a question about who we are, what we do, and why we do it, then you should {{#link-to 'new-question'}}ask{{/link-to}} us</p>
+</div>  
