--- a/app/templates/components/answer-list.hbs
+++ b/app/templates/components/answer-list.hbs
@@ -1,5 +1,7 @@
-<h4>Answers:</h4>
-{{#each question.answers as |answer|}}
-  <h5>{{answer.author}}</h5>
-  <p>{{answer.content}}</p>
-{{/each}}
+<h3>A: Answers</h3>
+  {{#each question.answers as |answer|}}
+  <div class="answer">
+    <h5>{{answer.author}}</h5>
+    <p>{{answer.content}}</p>
+  </div>
+  {{/each}}
