--- a/app/templates/components/new-answer.hbs
+++ b/app/templates/components/new-answer.hbs
@@ -1,15 +1,15 @@
-<h4>Answer this question</h4>
 <div>
+  <h3>Answer this question</h3>
   <form>
     <div class="form-group">
       <label for="author">Name:</label>
-      {{input value=author id="author"}}
+      {{input value=author id="author" class="form-control"}}
     </div>
 
     <div class="form-group">
       <label for="content">Answer:</label>
-      {{textarea value=content id="content"}}
+      {{textarea rows="4" value=content id="content" class="form-control"}}
     </div>
-    <button {{action 'saveAnswer'}}>Submit</button>
+    <button {{action 'saveAnswer'}} class="btn btn-default">Submit</button>
   </form>
 </div>
