--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -1,4 +1,14 @@
-{{question-detail question=model}}
-{{edit-question edit="edit" question=model}}
-{{new-answer saveAnswer="saveAnswer" question=model}}
-{{answer-list question=model}}
+<div class="question-page">
+  {{edit-question edit="edit" question=model}}
+  <div class="question-top">
+    <div class="question-detail">
+      {{question-detail question=model}}
+    </div>
+    <div class="new-answer">
+      {{new-answer saveAnswer="saveAnswer" question=model}}
+    </div>
+  </div>
+  <div class="answer-list">
+    {{answer-list question=model}}
+  </div>
+</div>  
