--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,5 +1,5 @@
 <div class="explanation">
-  <h5>Got a question? Just {{#link-to 'new-question'}}ask{{/link-to}}! Got an answer? Click on a question below!</h5>
+  <p>Got a question? Just {{#link-to 'new-question'}}ask{{/link-to}}! Got an answer? Click on a question below!</p>
 </div>
 
 {{#each model as |question|}}
