install sass and create computed property for number of answers each question has

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,5 +1,5 @@
 body {
-  background-color: #80AEC1;
+  background-color: lighten(#80AEC1, 5%);
   font-family: 'Hind Siliguri', sans-serif;
 }
 
@@ -70,7 +70,7 @@ header {
 }
 
 a {
-  color: #FFFCFC;
+  color: white;
 }
 
 .explanation {
