--- a/app/templates/components/question-preview.hbs
+++ b/app/templates/components/question-preview.hbs
@@ -1,2 +1,2 @@
 <h3>{{#link-to 'question' question.id}}{{question.ask}}{{/link-to}} - by {{question.author}}</h3>
-<sup><h5>Answers: <span class="answer-popularity">{{answerPopularity}}</span></h5></sup>
+<sup><h5>Answers: <span class="answer-popularity">{{answerPopularity}}</span> | {{question-popularity question}}</h5></sup>
