create service for questions that a user likes

--- a/app/templates/components/question-detail.hbs
+++ b/app/templates/components/question-detail.hbs
@@ -2,4 +2,9 @@
   <h3>Q: {{question.ask}}</h3>
   <h4>From: {{question.author}}</h4>
   <p>{{question.notes}}</p>
+  {{#if question.favorited}}
+    <p>You Favorited This Question :)</p>
+  {{else}}
+    <button {{action 'favorite' question}}>Favorite This Question</button>
+  {{/if}}
 </div>
