add new route and component to view only the questions a user as favorited

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -7,6 +7,8 @@
       <ul class="nav navbar-nav navbar-left">
         <li><a>{{#link-to 'new-question'}}Ask Question{{/link-to}}</a></li>
         <li><a>{{#link-to 'about'}}About{{/link-to}}</a></li>
+        <li><a>{{#link-to 'favorites'}}Your Favorites{{/link-to}}</a></li>
+
       </ul>
     </div>
   </div>
